[gd_scene load_steps=6 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://Scripts/prototype/CafePrototype.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/prototype/GridPlacer.gd" id="2"]
[ext_resource type="Script" path="res://Scripts/prototype/DebugHUD.gd" id="3"]
[ext_resource type="Script" path="res://Scripts/data/DataLoader.gd" id="4"]
[ext_resource type="Script" path="res://Scripts/data/SaveSystem.gd" id="5"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="DataLoader" type="Node" parent="."]
script = ExtResource("4")

[node name="SaveSystem" type="Node" parent="."]
script = ExtResource("5")

[node name="World" type="Node2D" parent="."]

[node name="GridPlacer" type="Node2D" parent="World"]
script = ExtResource("2")

[node name="DecorLayer" type="Node2D" parent="World"]

[node name="CatLayer" type="Node2D" parent="World"]

[node name="PatronLayer" type="Node2D" parent="World"]

[node name="RestArea" type="Marker2D" parent="World"]
position = Vector2(1280, 180)

[node name="DebugHUD" type="CanvasLayer" parent="."]
script = ExtResource("3")
